crates/elm-client-gen-derive-tests/tests/compile_fail/union.stderr
error: ElmType cannot be derived for unions
 --> tests/compile_fail/union.rs:5:11
  |
5 | pub union Bits {
  |           ^^^^
